--- a/index.html
+++ b/index.html
@@ -110,6 +110,25 @@
       from {opacity: .4}
       to {opacity: 1}
     }
+    @media (max-width: 768px) {
+      .prev, .next {
+        font-size: 12px;
+        padding: 10px;
+      }
+      .whatsapp-btn {
+        font-size: 0.8em;
+        padding: 8px 16px;
+      }
+      .product {
+        margin: 5px;
+        padding: 15px;
+      }
+    }
+    @media (max-width: 576px) {
+      .product {
+        padding: 10px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -117,9 +136,9 @@
     <img src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="Logo do site" class="img-fluid">
   </header>
 
-  <nav class="navbar navbar-expand-lg navbar-">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">)))</a>
+      <a class="navbar-brand" href="#">MOSCHIAT</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -168,7 +187,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="product">
           <h2>Pacote Essencial</h2>
           <small>
@@ -183,7 +202,7 @@
           <a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%201" target="_blank">WhatsApp</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-6">
         <div class="product">
           <h2>Pacote Premium</h2>
           <small>
@@ -200,7 +219,7 @@
           <a class="whatsapp-btn" href="https://wa.me/5531992380630?text=Tenho%20interesse%20no%20Produto%202" target="_blank">WhatsApp</a>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <div class="product">
           <h2>Pacote Deluxe</h2>
           <small>
