--- a/bruno.html
+++ b/bruno.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: #f8f9fa;
+            color: #333;
         }
         .card {
             max-width: 400px;
@@ -21,10 +22,10 @@
         .card-header {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #0047ff;
+            color: #0066cc;
         }
         .card-body p {
-            color: #ff7f00;
+            color: #666;
             font-size: 1rem;
         }
         .btn-whatsapp {
@@ -41,7 +42,7 @@
         }
         .footer-links a {
             margin: 0 10px;
-            color: #007bff;
+            color: #0066cc;
         }
         .content-links {
             text-align: left;
@@ -49,7 +50,7 @@
         }
         .content-links a {
             margin: 0 10px;
-            color: #000;
+            color: #333;
             font-weight: bold;
         }
         .img-container {
@@ -73,11 +74,16 @@
             margin-right: 10px;
             height: 30px;
         }
+        .align-center {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     </style>
 </head>
 <body>
     <div class="container mt-5">
-        <div class="row">
+        <div class="row align-center">
             <div class="col-md-6 img-container">
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimkxmf-Aqpgs6ErnQoBdGg_5fV2rFwTxeQ5_amRB7mmp8dYXtvUcFxR-CsSVoEFwmx5f1YphhXhw661L_Zjkzmqyr_gQft1Xqb7JpCakjKPoobOpocm1D1kU-82x3AkhihO3-hGdBs06LOsZzfRHhSXYT1kt-DdtAqm03B-EKcWcqyvG8TtAq9wVTjxJ4U/s1600/Captura%20de%20tela%202022-10-11%20145757.png" alt="Imagem">
             </div>
