--- a/index.html
+++ b/index.html
@@ -38,19 +38,20 @@
             background-color: #fff;
         }
         .card-header {
-            font-size: 1.5rem;
+            font-size: 1.2rem; /* Reduzido */
             font-weight: bold;
             color: #0066cc;
         }
         .card-body p {
             color: #666;
-            font-size: 1rem;
+            font-size: 0.9rem; /* Reduzido */
         }
         .btn-whatsapp {
             background-color: #25d366;
             color: white;
             font-weight: bold;
             margin-bottom: 10px;
+            font-size: 0.9rem; /* Reduzido */
         }
         .btn-whatsapp:hover {
             background-color: #1ebe5b;
@@ -63,7 +64,7 @@
             color: #0066cc;
         }
         .content-links {
-            text-align: left;
+            text-align: right; /* Alinhado à direita */
             margin: 10px 0;
         }
         .content-links a {
@@ -97,15 +98,22 @@
             align-items: center;
             justify-content: center;
         }
+        .small-text {
+            font-size: 0.9rem; /* Reduzido */
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <div id="password-overlay">
         <div class="card">
-            <div class="card-header">Área Exclusiva para Membros</div>
+            <div class="card-header">
+                Área Exclusiva para Membros
+            </div>
             <div class="card-body">
-                <p>Tenha acesso a Fotografias, PDFs, Vídeos e Insights</p>
-                <p>Desbloqueie um universo de conteúdos únicos</p>
+                <p class="small-text">Um lugar onde compartilho minhas experiências, projetos.<br>
+                Tenha acesso a Fotografias, PDFs, Vídeos e Insights<br>
+                "A arte é o que eu faço você ver".</p>
                 <form>
                     <div class="form-group">
                         <input type="password" class="form-control" id="password" placeholder="Senha de acesso">
@@ -115,19 +123,17 @@
                     </button>
                     <div class="buy-access-container">
                         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjDGXYrRe5vPe6Wfu-eVgRlq7oxebCR3RuzXKOb_0we9ytZxMaVpmFWJ3eWUBZNNpT5YRHBX2gbtCNvyfLBcQDSGnAd5n_ff7u5dq56K37go3mMiXo3StJDDf7SUP0ziN8L6cxSkhFeDVd52V2NPmWOrxn0pZtBJaUiGQ3iLmutvg6vzAYR9-Lro1SzMLXX/s1600/image_2024-07-14_223838502.png" alt="Ícone">
-                        <button type="submit" class="btn btn-primary">Comprar acesso</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Comprar acesso</button>
                     </div>
                 </form>
                 <div class="content-links">
                     <a href="#">Fotografia</a>
-                    <a href="#">Conteudo +18</a>
+                    <a href="#">Conteúdo +18</a>
                     <a href="#">Curadoria Musical</a>
                     <a href="#">AudioVisual</a>
                 </div>
-                <div class="footer-links">
-                    <a href="#">Instagram</a>
-                    <a href="#">YouTube</a>
-                    <a href="#">LinkedIn</a>
+                <div class="img-container">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimkxmf-Aqpgs6ErnQoBdGg_5fV2rFwTxeQ5_amRB7mmp8dYXtvUcFxR-CsSVoEFwmx5f1YphhXhw661L_Zjkzmqyr_gQft1Xqb7JpCakjKPoobOpocm1D1kU-82x3AkhihO3-hGdBs06LOsZzfRHhSXYT1kt-DdtAqm03B-EKcWcqyvG8TtAq9wVTjxJ4U/s1600/Captura%20de%20tela%202022-10-11%20145757.png" alt="Imagem">
                 </div>
             </div>
         </div>
