--- a/index.html
+++ b/index.html
@@ -29,22 +29,26 @@
             z-index: 1000;
         }
         .card {
-            max-width: 400px;
+            max-width: 800px; /* Ajustado para acomodar a imagem maior e o conteúdo */
             margin: auto;
             padding: 20px;
             border: 1px solid #e0e0e0;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            text-align: center;
             background-color: #fff;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
         }
         .card-header {
             font-size: 1.2rem; /* Reduzido */
             font-weight: bold;
             color: #0066cc;
         }
-        .card-body p {
+        .card-body {
             color: #666;
             font-size: 0.9rem; /* Reduzido */
+            flex: 1;
         }
         .btn-whatsapp {
             background-color: #25d366;
@@ -64,7 +68,7 @@
             color: #0066cc;
         }
         .content-links {
-            text-align: right; /* Alinhado à direita */
+            text-align: center; /* Alinhado ao centro */
             margin: 10px 0;
         }
         .content-links a {
@@ -74,10 +78,12 @@
         }
         .img-container {
             text-align: center;
+            flex: 1;
+            padding: 10px;
         }
         .img-container img {
             width: 100%;
-            max-width: 400px;
+            max-width: 400px; /* Aumentado para 400px */
             height: auto;
         }
         .icon-image {
@@ -102,45 +108,52 @@
             font-size: 0.9rem; /* Reduzido */
             text-align: center;
         }
+        .card-body-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
     </style>
 </head>
 <body>
     <div id="password-overlay">
         <div class="card">
-            <div class="card-header">
-                Área Exclusiva para Membros
-            </div>
-            <div class="card-body">
-                <p class="small-text">Um lugar onde compartilho minhas experiências, projetos.<br>
-                Tenha acesso a Fotografias, PDFs, Vídeos e Insights<br>
-                "A arte é o que eu faço você ver".</p>
-                <form>
-                    <div class="form-group">
-                        <input type="password" class="form-control" id="password" placeholder="Senha de acesso">
+            <div class="card-body-wrapper">
+                <div class="card-body">
+                    <div class="card-header">
+                        Área Exclusiva para Membros
                     </div>
-                    <button type="button" class="btn btn-whatsapp btn-block" onclick="checkPassword()">
-                        Comprar o acesso e converse comigo no WhatsApp
-                    </button>
-                    <div class="buy-access-container">
-                        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjDGXYrRe5vPe6Wfu-eVgRlq7oxebCR3RuzXKOb_0we9ytZxMaVpmFWJ3eWUBZNNpT5YRHBX2gbtCNvyfLBcQDSGnAd5n_ff7u5dq56K37go3mMiXo3StJDDf7SUP0ziN8L6cxSkhFeDVd52V2NPmWOrxn0pZtBJaUiGQ3iLmutvg6vzAYR9-Lro1SzMLXX/s1600/image_2024-07-14_223838502.png" alt="Ícone">
-                        <button type="submit" class="btn btn-primary btn-sm">Comprar acesso</button>
-                    </div>
-                </form>
+                    <p class="small-text">Um lugar onde compartilho minhas experiências, projetos.<br>
+                    Tenha acesso a Fotografias, PDFs, Vídeos e Insights<br>
+                    "A arte é o que eu faço você ver".</p>
+                    <form>
+                        <div class="form-group">
+                            <input type="password" class="form-control" id="password" placeholder="Senha de acesso">
+                        </div>
+                        <button type="button" class="btn btn-whatsapp btn-block" onclick="checkPassword()">
+                            Entrar
+                        </button>
+                        <div class="buy-access-container">
+                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjDGXYrRe5vPe6Wfu-eVgRlq7oxebCR3RuzXKOb_0we9ytZxMaVpmFWJ3eWUBZNNpT5YRHBX2gbtCNvyfLBcQDSGnAd5n_ff7u5dq56K37go3mMiXo3StJDDf7SUP0ziN8L6cxSkhFeDVd52V2NPmWOrxn0pZtBJaUiGQ3iLmutvg6vzAYR9-Lro1SzMLXX/s1600/image_2024-07-14_223838502.png" alt="Ícone">
+                            <button type="submit" class="btn btn-primary btn-sm">Comprar acesso</button>
+                        </div>
+                    </form>
+                </div>
                 <div class="content-links">
                     <a href="#">Fotografia</a>
                     <a href="#">Conteúdo +18</a>
                     <a href="#">Curadoria Musical</a>
                     <a href="#">AudioVisual</a>
                 </div>
-                <div class="img-container">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimkxmf-Aqpgs6ErnQoBdGg_5fV2rFwTxeQ5_amRB7mmp8dYXtvUcFxR-CsSVoEFwmx5f1YphhXhw661L_Zjkzmqyr_gQft1Xqb7JpCakjKPoobOpocm1D1kU-82x3AkhihO3-hGdBs06LOsZzfRHhSXYT1kt-DdtAqm03B-EKcWcqyvG8TtAq9wVTjxJ4U/s1600/Captura%20de%20tela%202022-10-11%20145757.png" alt="Imagem">
-                </div>
+            </div>
+            <div class="img-container">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimkxmf-Aqpgs6ErnQoBdGg_5fV2rFwTxeQ5_amRB7mmp8dYXtvUcFxR-CsSVoEFwmx5f1YphhXhw661L_Zjkzmqyr_gQft1Xqb7JpCakjKPoobOpocm1D1kU-82x3AkhihO3-hGdBs06LOsZzfRHhSXYT1kt-DdtAqm03B-EKcWcqyvG8TtAq9wVTjxJ4U/s1600/Captura%20de%20tela%202022-10-11%20145757.png" alt="Imagem">
             </div>
         </div>
     </div>
 
     <div id="main-content">
-        <!-- Meu Site HTML content starts here -->
+        <!-- Meu Site HTML content starts aqui -->
         <header class="text-center py-4">
             <img src="https://1.bp.blogspot.com/-7dOxTmshjp8/XkrYD1xd8rI/AAAAAAABCI4/iZnnnSu43p8zdRvTbbcZZ0_ZB36_NTp7wCK4BGAYYCw/s792/chiat%2B2.png" alt="Logo do site" class="img-fluid">
         </header>
@@ -170,7 +183,9 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhlM8THVsOfGhOQZoGFqwBL9TCp5WFKP--CYLgXgorq_6jxqgoUbUQiSH7YIGEuO6owKH-zMjV6HqnJHUYdve3hbuj1O6_uTjAWTb12faOqDtwIq0UPWgLfQbYt6zvErthZ5hVHs9dCrSQwZmV2uL0VcfZ0I-spBTUX-wPv6TTGg9iR2EFR_IPmnJHnLnna/s320/IMG_8501.JPG" style="width:100%">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhlM8THVsOfGhOQZoGFqwBL9TCp5WFKP--CYLgXgorq_6jxqgoUbUQiSH7YIGEuO6owKH-zMjV6HqnJHUYdve3hbuj1O6_uT
+
+jAWTb12faOqDtwIq0UPWgLfQbYt6zvErthZ5hVHs9dCrSQwZmV2uL0VcfZ0I-spBTUX-wPv6TTGg9iR2EFR_IPmnJHnLnna/s320/IMG_8501.JPG" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
             <div class="mySlides fade">
