--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             text-align: center; /* Alinhado ao centro */
             margin: 10px 0;
         }
+        .footer-content-links {
+            font-size: 0.8rem; /* Diminui o tamanho do texto */
+            text-align: left; /* Alinha o texto à esquerda */
+            margin-left: 20px; /* Move o texto para a esquerda */
+        }
         .content-links a {
             margin: 0 10px;
             color: #333;
@@ -134,12 +139,14 @@
                             Entrar
                         </button>
                         <div class="buy-access-container">
-                            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjDGXYrRe5vPe6Wfu-eVgRlq7oxebCR3RuzXKOb_0we9ytZxMaVpmFWJ3eWUBZNNpT5YRHBX2gbtCNvyfLBcQDSGnAd5n_ff7u5dq56K37go3mMiXo3StJDDf7SUP0ziN8L6cxSkhFeDVd52V2NPmWOrxn0pZtBJaUiGQ3iLmutvg6vzAYR9-Lro1SzMLXX/s1600/image_2024-07-14_223838502.png" alt="Ícone">
-                            <button type="submit" class="btn btn-primary btn-sm">Comprar acesso</button>
+                            <button type="submit" class="btn btn-primary btn-sm">
+                                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjDGXYrRe5vPe6Wfu-eVgRlq7oxebCR3RuzXKOb_0we9ytZxMaVpmFWJ3eWUBZNNpT5YRHBX2gbtCNvyfLBcQDSGnAd5n_ff7u5dq56K37go3mMiXo3StJDDf7SUP0ziN8L6cxSkhFeDVd52V2NPmWOrxn0pZtBJaUiGQ3iLmutvg6vzAYR9-Lro1SzMLXX/s1600/image_2024-07-14_223838502.png" alt="Ícone" style="height: 20px; margin-right: 5px;">
+                                Comprar acesso
+                            </button>
                         </div>
                     </form>
                 </div>
-                <div class="content-links">
+                <div class="content-links footer-content-links">
                     <a href="#">Fotografia</a>
                     <a href="#">Conteúdo +18</a>
                     <a href="#">Curadoria Musical</a>
@@ -183,9 +190,7 @@
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhlM8THVsOfGhOQZoGFqwBL9TCp5WFKP--CYLgXgorq_6jxqgoUbUQiSH7YIGEuO6owKH-zMjV6HqnJHUYdve3hbuj1O6_uT
-
-jAWTb12faOqDtwIq0UPWgLfQbYt6zvErthZ5hVHs9dCrSQwZmV2uL0VcfZ0I-spBTUX-wPv6TTGg9iR2EFR_IPmnJHnLnna/s320/IMG_8501.JPG" style="width:100%">
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhlM8THVsOfGhOQZoGFqwBL9TCp5WFKP--CYLgXgorq_6jxqgoUbUQiSH7YIGEuO6owKH-zMjV6HqnJHUYdve3hbuj1O6_uTjAWTb12faOqDtwIq0UPWgLfQbYt6zvErthZ5hVHs9dCrSQwZmV2uL0VcfZ0I-spBTUX-wPv6TTGg9iR2EFR_IPmnJHnLnna/s320/IMG_8501.JPG" style="width:100%">
                 <div class="text">Caption Text</div>
             </div>
             <div class="mySlides fade">
